--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ version: 2
 # Personal info
 name: Heejae Yoo
 #title: Senior Network System Administrator
-email: daniehjyoo@gmail.com
+email: heejaeyoo.4@gmail.com
 #website: www.github.com/sproogen/resume-theme
 
 # Dark Mode (true/false/never)
@@ -18,15 +18,15 @@ darkmode: false
 #twitter_username: facespics
 github_username:  daniehjyoo
 # stackoverflow_username: "00000001"
-# dribbble_username: jekyll
-# facebook_username: jekyll
-# flickr_username: jekyll
-#instagram_username: jameswgrant
+# dribbble_username: 
+# facebook_username: 
+# flickr_username: 
+#instagram_username: 
 linkedin_username: heejae-yoo
-# xing_username: jekyll
-# pinterest_username: jekyll
-#youtube_username: globalmtb
-# googleplus_username: +jekyll
+# xing_username: 
+# pinterest_username: 
+#youtube_username: 
+# googleplus_username: +
 # orcid_username: 0000-0000-0000-0000
 
 # Additional icon links
@@ -48,9 +48,11 @@ linkedin_username: heejae-yoo
 # about_title: About Me
 about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
-  Hi, my name's Heejae and I'm a graduate of University of Texas at Dallas as a Bachleor of Computer Science. Since graduation I've been working on self improving coding skills and strengthening it the knowledge from the degree. I have experience making small soft programs and web apps.
+  Hi, my name's Heejae and I'm a graduate of University of Texas at Dallas as a Bachleor of Computer Science. 
+  Since graduation I've been working on self improving coding skills and strengthening it with the knowledge I obtained throughout my years working for my degree. 
+  I have experience making small soft programs and web apps.
 
-  I am most skilled in: <mark>Java</mark>,  <mark> Python</mark> and, <mark>Gaming!</mark> 
+  I am most skilled in: <mark>Java</mark>,  <mark> Python</mark> and, of course <mark>Gaming!</mark> 
 
 content:
   - title: Projects # Title for the section
@@ -68,49 +70,38 @@ content:
           #   icon: fab fa-github
           #   url: Link to project (eg. sproogen.github.io/modern-resume-theme)
         quote: >
-          This is probably one of the greatest apps ever created, if you don't agree you're probably wrong.
+          Built a new website using Golang and PostgreSQL to help doctors get patient data digitized in rural areas of India. Increased patient data retrieval by reducing the paper trail.
         description: | # this will include new lines to allow paragraphs
-          I started this project as a way if learning <mark>React</mark> and it has since grown into a fully fledged app. I have learned many skills through this and been I'm very proud of having this in my portfolio. If you don't have a project as awesome as this I would advise you make one.
-
-  - title: Experience # Title for the section
-    layout: list # Type of content section (list/text)
-    content:
-      - layout: left
-        title: The Boring Company
-        link: boringcompany.com
-        # link_text: boringcompany.com
-        sub_title: Senior Network System Administrator
-        caption: November 2017 - Present
-        quote: >
-          Solving 21st century problems by diging holes and making game changing products like the *not a flamethrower*
-        description: | # this will include new lines to allow paragraphs
-            Every company needs its networks properly administered and The Boring Compay is no exception. Digging holes is hard and I play my part making sure the whole company stays connected. I lead a team of 5 people and enjoy driving the company to try new technologies.
+          This project was started for the group to tackle a big project together and learn collabaration and as a way of learning <mark>Full Stack Development</mark>.
+          The website was hosted and maintained through a docker container on an EC2 instance on AWS. 
+          I have learned working on the backend with GO and maintaining the database needed with PostgreSQL through this and happy to have this in my portfolio.
 
   - title: Education # Title for the section
     layout: list # Type of content section (list/text)
     content:
       - layout: left
-        title: Harvard University
-        caption: 2010 - 2013
+        title: University of Texas at Dallas
+        caption: 2019 - 2021
         sub_title: BSc Computer Science
-        quote: >
-          Established in 1636, Harvard is the oldest higher education institution in the United States, and is widely regarded in terms of its influence, reputation, and academic pedigree as a leading university in not just the US but also the world.
+        # quote: >
+        #  Established in 1636, Harvard is the oldest higher education institution in the United States, and is widely regarded in terms of its influence, reputation, and academic pedigree as a leading university in not just the US but also the world.
         description: | # this will include new lines to allow paragraphs
-          During my time at Harvard I learnt most of my key skills that have I have taken through my career such as teamwork and working to tight deadlines. I thouroughly enjoyed my time as university and learnt a lot about a healthy work life balance.
+          I transfered into UTD from a college that I was working through the Texas CORE requirements alongside part time working.
+          I spent then the 2 years into taking the computer science courses at UTD where I learned core developing concepts, techniques, and the theory of the science. 
+          I thouroughly enjoyed my time as university and learnt a lot about a healthy work life balance.
 
-          I spent a lot of my free time as a committee member of the *Harvard Mountaineering Club* taking on roles such as *Trip Secretary* and *Vice-President*.
 
   - title: A Little More About Me
     layout: text
     content: | # this will include new lines to allow paragraphs
       Alongside my interests in networks and software engineering some of my other interests and hobbies are:
-      - Rock climbing
+      - Cooking
       - Gaming
-      - Knitting
-      - [Becoming a ninja](https://www.youtube.com/watch?v=vtg4o__aRMg)s
+      - Working out
 
-      Look at this cool image  
-      ![Trees](/modern-resume-theme/images/landscape-trees.jpg "Trees")
+     # - [hyperlink](link)s
+     # Look at this cool image  
+     # ![Trees](/modern-resume-theme/images/landscape-trees.jpg "Trees")
 
 # Footer
 footer_show_references: true
