--- a/_config.yml
+++ b/_config.yml
@@ -46,7 +46,7 @@ linkedin_username: heejae-yoo
 
 # About Section
 # about_title: About Me
-about_profile_image: images/profile.jpg
+about_profile_image: images/20210722_163102.jpg
 about_content: | # this will include new lines to allow paragraphs
   Hi, my name's Heejae and I'm a graduate of University of Texas at Dallas as a Bachleor of Computer Science. 
   Since graduation I've been working on self improving coding skills and strengthening it with the knowledge I obtained throughout my years working for my degree. 
