Extra about me info

--- a/_config.yml
+++ b/_config.yml
@@ -140,6 +140,8 @@ content:
       - Snow sports, especially snowboarding!
       - Working out
 
+      I made a fun site for my current [favorite game](https://daniehjyoo.github.io/landing_page/) of all time!
+
      # - [hyperlink](link)s
      # Look at this cool image  
      # ![Trees](/modern-resume-theme/images/landscape-trees.jpg "Trees")
